objects/Terms_And_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Portal T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Terms_And_Conditions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Terms And Conditions</label>
        <referenceTo>Terms_And_Conditions__c</referenceTo>
        <relationshipLabel>Terms And Conditions</relationshipLabel>
        <relationshipName>Terms_And_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_C_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>T&amp;C Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Terms And Conditions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>T_C_Text__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Terms And Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms And Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Language_Field</fullName>
        <active>true</active>
        <errorConditionFormula>Master_Terms_And_Conditions__c != null &amp;&amp;   
ISPICKVAL( Language__c , &apos;&apos;)</errorConditionFormula>
        <errorMessage>Language field required</errorMessage>
    </validationRules>
</CustomObject>